# django-portfolio

./: .dockerignore  .env  .gitignore  Dockerfile.dev  constraints.txt  docker-compose.yml  manage.py  pyproject.toml
portfolio/: settings.py  urls.py
projects/: urls.py  views.py
projects/templates/projects/: all_projects.html  base.html  contacts.html  detail.html  home.html
web/: Dockerfile  constraints.txt  pyproject.toml
web/config/gunicorn/: dev.py
web/config/nginx/: mime.types  nginx.conf
web/src/portfolio/: settings.py
web/src/projects/: models.py
web/src/projects/migrations/: 0001_initial.py  0002_alter_project_image.py  0003_alter_project_image.py  0004_project_github.py
web/src/projects/templates/projects/: all_projects.html  detail.html
